# Eindopdracht_ML21

./: .gitignore  README.md  __init__.py  definitions.py  pyproject.toml
notebooks/: .gitignore  0-introduction.ipynb  1-EDA.ipynb  2-base_model.ipynb  3-hypertune.ipynb  4-evaluation.ipynb  best_base_model.h5
src/data/: .gitignore  make_dataset.py  test_functions.ipynb
src/models/: best_base_model.h5  train_model.py
src/models/best_base_model.model/: keras_metadata.pb  saved_model.pb
src/models/best_base_model.model/variables/: variables.data-00000-of-00001  variables.index
src/models/winning_hypermodel.model/: keras_metadata.pb  saved_model.pb
src/models/winning_hypermodel.model/variables/: variables.data-00000-of-00001  variables.index
src/visualization/: visualize.py
